--- a/.coveragerc
+++ b/.coveragerc
@@ -1,7 +1,30 @@
 [run]
-branch = true
-omit = */tests/*, */migrations/*, */urls.py, */settings/*, */wsgi.py, manage.py, fabfile.py
-source = .
+branch = True
+source = {{project_name}}
+omit =
+    */migrations/*
+    */tests/*
+    */settings/*
+    */wsgi.py
+    manage.py
+    */urls.py
 
 [report]
-show_missing = true
+# Regexes for lines to exclude from consideration
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+    # Don't complain about missing debug-only code:
+    def __repr__
+    if self\.debug:
+    if settings\.DEBUG
+    raise AssertionError
+    raise NotImplementedError
+    # Don't complain if non-runnable code isn't run:
+    if 0:
+    if __name__ == .__main__.:
+    def __iter__
+    def __len__
+    __metaclass__
+    def __init__
+ignore_errors = True
